fix: vk oauth callback schema
